AMBER/gen_input and AMBER/gen_structure are copied into share/ermod/tools directory at make install
--HG--
branch : ver03

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,8 @@ ACLOCAL_AMFLAGS = -I m4
 bin_PROGRAMS = ermod slvfe
 nobase_pkgdata_SCRIPTS = \
 	tools/NAMD/gen_structure tools/NAMD/gen_input \
-	tools/gromacs/gen_structure tools/gromacs/gen_input
+	tools/gromacs/gen_structure tools/gromacs/gen_input \
+	tools/AMBER/gen_structure tools/AMBER/gen_input
 
 dist_pkglibexec_SCRIPTS = vmdplugins/libexec/*.so
 
