The normalization for avslf is corrected (there was a bug when stat_weight_system /= 1), recpcal.F90 and setconf.F90 are made easier to read, and the com_aggregate subroutine is moved from bestfit.F90 to insertion.F90 to make bestfit.F90 more like a collection of utility subprograms
--HG--
branch : ver03

--- a/Makefile.am
+++ b/Makefile.am
@@ -53,7 +53,7 @@ ermod-realcal.$(OBJEXT): realcal.F90 ermod-engmain.$(OBJEXT)
 ermod-recpcal.$(OBJEXT): recpcal.F90 ermod-spline.$(OBJEXT) ermod-fft_iface.$(OBJEXT) ermod-mpiproc.$(OBJEXT) ermod-engmain.$(OBJEXT)
 ermod-insertion.$(OBJEXT): insertion.F90 ermod-setconf.$(OBJEXT) ermod-bestfit.$(OBJEXT) ermod-trajectory.$(OBJEXT) ermod-mpiproc.$(OBJEXT) ermod-engmain.$(OBJEXT)
 ermod-setconf.$(OBJEXT): setconf.F90 ermod-utility.$(OBJEXT) ermod-trajectory.$(OBJEXT) ermod-mpiproc.$(OBJEXT) ermod-engmain.$(OBJEXT)
-ermod-bestfit.$(OBJEXT): bestfit.F90 ermod-mpiproc.$(OBJEXT) ermod-engmain.$(OBJEXT)
+ermod-bestfit.$(OBJEXT): bestfit.F90 ermod-mpiproc.$(OBJEXT)
 ermod-trajectory.$(OBJEXT): trajectory.F90 ermod-utility.$(OBJEXT)
 ermod-utility.$(OBJEXT): utility.F90 ermod-engmain.$(OBJEXT)
 ermod-mpiproc.$(OBJEXT): mpiproc.F90 ermod-engmain.$(OBJEXT)
