--- a/parameters_fe.example
+++ b/parameters_fe.example
@@ -8,6 +8,6 @@ peread = "not",   ! "yes" if solvent-specific mesh is prepared in EcdInfo file
 uvread = "yes",   ! "not" if average solute-solvent energy is calculated from engsln, instead of aveuv.tt
 slfslt = "yes",   ! "not" if the solute self energy is not read
 infchk = "yes",   ! Enable error analysis for exponential meshing
-inptemp = 300e0,  ! Input Temperature in Kelvin
-mesherr = 0.1e0,  ! Maximum mesh error tolerance without producing a warning
+inptemp = 300,    ! Input Temperature in Kelvin
+mesherr = 0.1,    ! Maximum mesh error tolerance without producing a warning
 /
