--- a/configure.ac
+++ b/configure.ac
@@ -3,7 +3,7 @@
 # autoconf <= 2.64 has a bug in AC_OPENMP
 AC_PREREQ([2.65])
 #AC_INIT(ermod, 0.3.%rev%, Matubayasi Laboratory)
-AC_INIT(ermod, 0.3.alpha8, Matubayasi Laboratory)
+AC_INIT(ermod, 0.3.beta1, Matubayasi Laboratory)
 AC_CONFIG_MACRO_DIR(m4)
 AC_CONFIG_SRCDIR([vmdfio.c])
 AM_INIT_AUTOMAKE
