Blacklisted Intel Compiler 12.1.x
--HG--
branch : ver02

--- a/configure.ac
+++ b/configure.ac
@@ -22,6 +22,16 @@ AC_PROG_CC_C_O
 AM_PROG_CC_C_O
 AC_PROG_FC([ifort xlf90 xlf f95 f90 frt gfortran g95])
 
+# Check for buggy variant of ifort.
+AS_IF([test x$FC = xifort],
+      [version=`$FC --version`
+       case "x$version" in # (
+       *12.1.*):
+         AC_MSG_ERROR([This program does not run correctly with Intel Compiler 12.1.x])
+       ;;
+       esac
+       ])
+
 # modified MPI detector (searches mpiifort first)
 AC_LANG(Fortran)
 ACX_MPI_MY
