Add flush subroutine after writing on flcuv.tt or progress.tt.
--HG--
branch : ver03

--- a/Makefile.am
+++ b/Makefile.am
@@ -46,6 +46,10 @@ else
 ermod_SOURCES += hash_real.c
 endif
 
+if USE_FLUSH
+ermod_FCFLAGS += -DHAVE_FLUSH
+endif
+
 extra_flags = 
 
 # module dependencies
